kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowise
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: flowise
